@@ -22,6 +22,8 @@ import com.homestay.repository.HomestayRepository;
 import com.homestay.repository.ReviewRepository;
 import com.homestay.repository.RoomRepository;
 import com.homestay.repository.UserRepository;
+import com.homestay.repository.HomestayImageRepository;
+import com.homestay.repository.HostApplicationRepository;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
@@ -46,6 +48,8 @@ public class UserCenterService {
     private final ReviewRepository reviewRepository;
     private final PortalService portalService;
     private final PasswordEncoder passwordEncoder;
+    private final HomestayImageRepository homestayImageRepository;
+    private final HostApplicationRepository hostApplicationRepository;
 
     public UserCenterService(
         UserRepository userRepository,
@@ -56,7 +60,9 @@ public class UserCenterService {
         FavoriteRepository favoriteRepository,
         ReviewRepository reviewRepository,
         PortalService portalService,
-        PasswordEncoder passwordEncoder
+        PasswordEncoder passwordEncoder,
+        HomestayImageRepository homestayImageRepository,
+        HostApplicationRepository hostApplicationRepository
     ) {
         this.userRepository = userRepository;
         this.homestayRepository = homestayRepository;
@@ -67,25 +73,27 @@ public class UserCenterService {
         this.reviewRepository = reviewRepository;
         this.portalService = portalService;
         this.passwordEncoder = passwordEncoder;
+        this.homestayImageRepository = homestayImageRepository;
+        this.hostApplicationRepository = hostApplicationRepository;
     }
 
     public Map<String, Object> profile(User user) {
-        return Map.of(
-            "id", user.getId(),
-            "username", user.getUsername(),
-            "nickname", user.getNickname(),
-            "phone", user.getPhone() == null ? "" : user.getPhone(),
-            "avatar", user.getAvatar() == null ? "" : user.getAvatar(),
-            "role", user.getRole().name(),
-            "blacklisted", Boolean.TRUE.equals(user.getBlacklisted())
-        );
+        Map<String, Object> data = new LinkedHashMap<>();
+        data.put("id", user.getId());
+        data.put("username", user.getUsername());
+        data.put("nickname", user.getNickname());
+        data.put("phone", user.getPhone() == null ? "" : user.getPhone());
+        data.put("avatar", user.getAvatar() == null ? "" : user.getAvatar());
+        data.put("role", user.getRole().name());
+        data.put("blacklisted", Boolean.TRUE.equals(user.getBlacklisted()));
+        return data;
     }
 
     @Transactional
     public Map<String, Object> updateProfile(User user, ProfileUpdateRequest request) {
-        user.setNickname(request.nickname());
-        user.setAvatar(request.avatar());
-        user.setPhone(request.phone());
+        user.setNickname(request.getNickname());
+        user.setAvatar(request.getAvatar());
+        user.setPhone(request.getPhone());
         userRepository.save(user);
         return profile(user);
     }
@@ -108,27 +116,30 @@ public class UserCenterService {
         }
         homestay.setFavoriteCount((int) favoriteRepository.countByHomestay(homestay));
         homestayRepository.save(homestay);
-        return Map.of("favorite", favorite, "favoriteCount", homestay.getFavoriteCount());
+        Map<String, Object> result = new LinkedHashMap<>();
+        result.put("favorite", favorite);
+        result.put("favoriteCount", homestay.getFavoriteCount());
+        return result;
     }
 
     @Transactional
     public Map<String, Object> createOrder(User user, BookingCreateRequest request) {
         ensureCanBook(user);
-        Homestay homestay = homestayRepository.findById(request.homestayId())
+        Homestay homestay = homestayRepository.findById(request.getHomestayId())
             .orElseThrow(() -> new BusinessException("房源不存在"));
-        if (!request.checkOutDate().isAfter(request.checkInDate())) {
+        if (!request.getCheckOutDate().isAfter(request.getCheckInDate())) {
             throw new BusinessException("退房日期必须晚于入住日期");
         }
-        List<Map<String, Object>> availableRooms = portalService.availableRooms(homestay.getId(), request.checkInDate(), request.checkOutDate());
-        List<Long> availableRoomIds = availableRooms.stream().map(item -> Long.valueOf(String.valueOf(item.get("id")))).toList();
-        if (!availableRoomIds.containsAll(request.roomIds())) {
+        List<Map<String, Object>> availableRooms = portalService.availableRooms(homestay.getId(), request.getCheckInDate(), request.getCheckOutDate());
+        List<Long> availableRoomIds = availableRooms.stream().map(item -> Long.valueOf(String.valueOf(item.get("id")))).collect(java.util.stream.Collectors.toList());
+        if (!availableRoomIds.containsAll(request.getRoomIds())) {
             throw new BusinessException("部分房间已被预订，请重新选择");
         }
-        List<Room> rooms = roomRepository.findAllById(request.roomIds());
-        if (rooms.size() != request.roomIds().size()) {
+        List<Room> rooms = roomRepository.findAllById(request.getRoomIds());
+        if (rooms.size() != request.getRoomIds().size()) {
             throw new BusinessException("房间数据不存在");
         }
-        long nights = ChronoUnit.DAYS.between(request.checkInDate(), request.checkOutDate());
+        long nights = ChronoUnit.DAYS.between(request.getCheckInDate(), request.getCheckOutDate());
         BigDecimal totalAmount = rooms.stream()
             .map(Room::getPrice)
             .reduce(BigDecimal.ZERO, BigDecimal::add)
@@ -138,14 +149,14 @@ public class UserCenterService {
         order.setOrderNo("HS" + UUID.randomUUID().toString().replace("-", "").substring(0, 16).toUpperCase());
         order.setUser(user);
         order.setHomestay(homestay);
-        order.setCheckInDate(request.checkInDate());
-        order.setCheckOutDate(request.checkOutDate());
+        order.setCheckInDate(request.getCheckInDate());
+        order.setCheckOutDate(request.getCheckOutDate());
         order.setNights((int) nights);
         order.setRoomCount(rooms.size());
         order.setTotalAmount(totalAmount);
-        order.setContactName(request.contactName());
-        order.setContactPhone(request.contactPhone());
-        order.setRemark(request.remark());
+        order.setContactName(request.getContactName());
+        order.setContactPhone(request.getContactPhone());
+        order.setRemark(request.getRemark());
         bookingOrderRepository.save(order);
 
         for (Room room : rooms) {
@@ -165,7 +176,7 @@ public class UserCenterService {
     public List<Map<String, Object>> orders(User user) {
         return bookingOrderRepository.findByUserOrderByCreatedAtDesc(user).stream()
             .map(this::orderSummary)
-            .toList();
+            .collect(java.util.stream.Collectors.toList());
     }
 
     @Transactional
@@ -240,12 +251,16 @@ public class UserCenterService {
         });
         bookingOrderRoomRepository.deleteAll(bookingOrderRoomRepository.findByOrder(order));
         bookingOrderRepository.delete(order);
-        return Map.of("id", orderId, "deleted", true);
+        
+        Map<String, Object> result = new LinkedHashMap<>();
+        result.put("id", orderId);
+        result.put("deleted", true);
+        return result;
     }
 
     @Transactional
     public Map<String, Object> createReview(User user, ReviewCreateRequest request) {
-        BookingOrder order = ownOrder(user, request.orderId());
+        BookingOrder order = ownOrder(user, request.getOrderId());
         if (order.getOrderStatus() != OrderStatus.COMPLETED) {
             throw new BusinessException("订单完成后才能评价");
         }
@@ -256,21 +271,88 @@ public class UserCenterService {
         review.setOrder(order);
         review.setUser(user);
         review.setHomestay(order.getHomestay());
-        review.setScore(request.score());
-        review.setContent(request.content());
-        review.setImageUrls(request.imageUrls() == null ? "" : String.join(",", request.imageUrls()));
+        review.setScore(request.getScore());
+        review.setContent(request.getContent());
+        review.setImageUrls(request.getImageUrls() == null ? "" : String.join(",", request.getImageUrls()));
         review.setStatus(ReviewStatus.APPROVED);
         reviewRepository.save(review);
         portalService.recalculateHomestayRating(order.getHomestay());
-        return Map.of("id", review.getId(), "score", review.getScore());
+        
+        Map<String, Object> result = new LinkedHashMap<>();
+        result.put("id", review.getId());
+        result.put("score", review.getScore());
+        return result;
+    }
+
+    @Transactional
+    public void deleteAccount(User user) {
+        // 1. 检查是否有未完成订单
+        List<BookingOrder> activeOrders = bookingOrderRepository.findByUserOrderByCreatedAtDesc(user).stream()
+            .filter(order -> order.getOrderStatus() != OrderStatus.COMPLETED 
+                && order.getOrderStatus() != OrderStatus.CANCELLED 
+                && order.getOrderStatus() != OrderStatus.REFUNDED)
+            .collect(java.util.stream.Collectors.toList());
+        if (!activeOrders.isEmpty()) {
+            throw new BusinessException("您有未完成的订单，请在订单完成后再注销账号");
+        }
+
+        // 2. 如果是房东，检查其房源下是否有未完成订单
+        if (user.getRole() == com.homestay.enums.RoleType.HOST) {
+            List<Homestay> homestays = homestayRepository.findByHost(user);
+            for (Homestay h : homestays) {
+                List<BookingOrder> hostOrders = bookingOrderRepository.findByHomestayOrderByCreatedAtDesc(h).stream()
+                    .filter(order -> order.getOrderStatus() != OrderStatus.COMPLETED 
+                        && order.getOrderStatus() != OrderStatus.CANCELLED 
+                        && order.getOrderStatus() != OrderStatus.REFUNDED)
+                    .collect(java.util.stream.Collectors.toList());
+                if (!hostOrders.isEmpty()) {
+                    throw new BusinessException("您的房源 [" + h.getName() + "] 存在未完成的订单，无法注销账号");
+                }
+            }
+        }
+
+        // 3. 删除用户本人的订单记录
+        List<BookingOrder> userOrders = bookingOrderRepository.findByUserOrderByCreatedAtDesc(user);
+        for (BookingOrder order : userOrders) {
+            bookingOrderRoomRepository.deleteAll(bookingOrderRoomRepository.findByOrder(order));
+            reviewRepository.findByOrder(order).ifPresent(reviewRepository::delete);
+            bookingOrderRepository.delete(order);
+        }
+
+        // 4. 如果是房东，级联删除其名下的房源和关联记录
+        if (user.getRole() == com.homestay.enums.RoleType.HOST) {
+            List<Homestay> homestays = homestayRepository.findByHost(user);
+            for (Homestay h : homestays) {
+                List<BookingOrder> hOrders = bookingOrderRepository.findByHomestayOrderByCreatedAtDesc(h);
+                for (BookingOrder order : hOrders) {
+                    bookingOrderRoomRepository.deleteAll(bookingOrderRoomRepository.findByOrder(order));
+                    reviewRepository.findByOrder(order).ifPresent(reviewRepository::delete);
+                    bookingOrderRepository.delete(order);
+                }
+                homestayImageRepository.deleteAll(homestayImageRepository.findByHomestayOrderBySortOrderAsc(h));
+                favoriteRepository.deleteAll(favoriteRepository.findByHomestay(h));
+                roomRepository.deleteAll(roomRepository.findByHomestayOrderByRoomNoAsc(h));
+                reviewRepository.deleteAll(reviewRepository.findByHomestayAndStatusOrderByCreatedAtDesc(h, ReviewStatus.APPROVED));
+                reviewRepository.deleteAll(reviewRepository.findByHomestayAndStatusOrderByCreatedAtDesc(h, ReviewStatus.HIDDEN));
+                homestayRepository.delete(h);
+            }
+        }
+
+        // 5. 删除其他关联数据
+        favoriteRepository.deleteByUser(user);
+        reviewRepository.deleteAll(reviewRepository.findByUserOrderByCreatedAtDesc(user));
+        hostApplicationRepository.deleteByUsername(user.getUsername());
+
+        // 6. 删除用户实体
+        userRepository.delete(user);
     }
 
     @Transactional
     public void changePassword(User user, PasswordChangeRequest request) {
-        if (!passwordEncoder.matches(request.oldPassword(), user.getPassword())) {
+        if (!passwordEncoder.matches(request.getOldPassword(), user.getPassword())) {
             throw new BusinessException("原密码错误");
         }
-        user.setPassword(passwordEncoder.encode(request.newPassword()));
+        user.setPassword(passwordEncoder.encode(request.getNewPassword()));
         userRepository.save(user);
     }
 
@@ -301,7 +383,7 @@ public class UserCenterService {
         data.put("checkOutDate", order.getCheckOutDate());
         data.put("nights", order.getNights());
         data.put("roomCount", order.getRoomCount());
-        data.put("roomNos", rooms.stream().map(BookingOrderRoom::getRoomNo).toList());
+        data.put("roomNos", rooms.stream().map(BookingOrderRoom::getRoomNo).collect(java.util.stream.Collectors.toList()));
         data.put("totalAmount", order.getTotalAmount());
         data.put("orderStatus", order.getOrderStatus().name());
         data.put("paymentStatus", order.getPaymentStatus().name());
